# duckdnsv6

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dist.sh
doc/: duckdnsv6.toml
rootfs/etc/s6-overlay/s6-rc.d/duckdnsv6/: run
src/: config.rs  errorhandler.rs  main.rs
