
[package]
name = "duckdnsv6"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.5.1"
scraper = "0.12.0"
toml = "0.5.8"
serde = {version = "1.0.130", features = ["derive"]}
colorful = "0.2.1"

[features]
default = ["loop_run"]
loop_run = []
once_run = []